<resources>
    <string name="app_name">Hello_World</string>
    <string name="button">Button</string>
    <string name="about_me">About me</string>
    <string name="quic_calc">Quic Calc</string>
    <string name="calc">CALC</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="x">x</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
</resources>