<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuicCalcActivity">

    <EditText
        android:id="@+id/calc_text"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:inputType="number"
        android:text="@string/calc"
        android:textSize="56sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_0"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_text"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/_1"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toBottomOf="@id/calc_text"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/_2"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/calc_text"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/_3"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn0"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/_2"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/calc_text"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/_2"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/calc_text"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>